--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "prisma": "^6.19.0",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
