--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,10 @@
 PORT=3001
 DATABASE_URL="postgresql://neondb_owner:npg_0HzOIGo2CuDe@ep-snowy-sunset-adfvsyea-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+
+# Better Auth
+BETTER_AUTH_SECRET=BETTER_AUTH_SECRET=VGzwmQnsW9CGqbbSLYlN7yf8VI7WB1Nx
+BETTER_AUTH_URL=http://localhost:3001 # Base URL of your app
+
+#github Oauth
+GITHUB_CLIENT_ID=Ov23lisUcJ2ICBUapcuI
+GITHUB_CLIENT_SECRET=ccdc9374181161636ddcadac6bd7136563eea5f1
