--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "better-auth": "^1.3.34",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -22,6 +23,7 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5"
   }
 }
