--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
+  "bin": {
+    "rynex": "./dist/cli/main.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon dist/index.js",
@@ -14,13 +17,22 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@clack/prompts": "^0.11.0",
     "@prisma/client": "^6.19.0",
     "better-auth": "^1.3.34",
+    "boxen": "^8.0.1",
+    "chalk": "^5.6.2",
+    "commander": "^14.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "figlet": "^1.9.4",
+    "gradient-string": "^3.0.0",
+    "open": "^11.0.0",
     "prisma": "^6.19.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "yocto-spinner": "^1.0.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
