--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,7 @@ BETTER_AUTH_URL=http://localhost:3001 # Base URL of your app
 #github Oauth
 GITHUB_CLIENT_ID=Ov23lisUcJ2ICBUapcuI
 GITHUB_CLIENT_SECRET=ccdc9374181161636ddcadac6bd7136563eea5f1
+
+
+GOOGLE_GENERATIVE_AI_API_KEY=AIzaSyDlIp6N4ax1fV5EYqy0CLpUm_8RHywJfHI
+RYNEX_MODEL=gemini-2.5-flash
