--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,10 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@ai-sdk/google": "^2.0.44",
     "@clack/prompts": "^0.11.0",
     "@prisma/client": "^6.19.0",
+    "ai": "^5.0.104",
     "better-auth": "^1.3.34",
     "boxen": "^8.0.1",
     "chalk": "^5.6.2",
